apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: 495294314260.dkr.ecr.us-east-1.amazonaws.com/sample-app:0dff6c6
          ports:
            - containerPort: 80
